# My-catalog

./: README.md  docker-compose.yml
.github/workflows/: lint-backend-style.yml  lint-backend-types.yml  lint-telegram-bot-style.yml  lint-telegram-bot-types.yml
backend/: .env-example  Dockerfile  pyproject.toml
backend/src/: __main__.py
backend/src/infrastructure/: __init__.py  mq_gateway.py  yandex_lavka_gateway.py
backend/src/infrastructure/repos/: __init__.py  categories.py  products.py  users.py
backend/src/model/: __init__.py
backend/src/model/cases/: __init__.py  add_category_by_query.py  register_user.py
backend/src/model/domain/: __init__.py  entities.py  errors.py  vos.py
backend/src/periphery/: __init__.py  brokers.py  envs.py  mongo.py
backend/src/presentation/: __init__.py  event_routes.py  events.py  sculptures.py
telegrambot/: .env-example  Dockerfile  pyproject.toml
